# rag-atini

./: .gitignore  Frankenstein_or_the_modern_prometheus.txt  LICENSE  README.md  RagAtini.py  benchmark.py  benchmarks.py  charts.py  doc_test.py  example.py  main.py  pip_install_example.py  pyproject.toml  requirements.txt  sample.txt
.github/workflows/: release.yml
ragatini/: RagAtini.py  __init__.py
